fix: update dependecies

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/styles": "^4.11.5",
+    "@material-ui/system": "^4.12.2",
+    "@material-ui/utils": "^4.11.3",
     "@snowpack/plugin-typescript": "1.2.1",
     "@types/codemirror": "0.0.109",
     "@types/node": "14.17.4",
@@ -15,6 +18,7 @@
     "cm-show-invisibles": "3.1.0",
     "codemirror": "5.61.0",
     "ot": "0.0.15",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-codemirror2": "git+https://github.com/ihollander/react-codemirror2.git#64597ae3267aebdff6af867d5105e44f739e09f2",
     "react-dom": "17.0.2",
